--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install: true
 script: 
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn test -B
+
+notification:
+  - email: false
