--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn test -B
 
-notification:
+notifications:
   - email: false
