added set of graphs for unit testing

--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # graph-utils output files
-./graph-utils/log1.txt
-./graph-utils/log2.txt
-./graph-utils/output_mode1/
-./graph-utils/output_mode2/
+graph-utils/log1.txt
+graph-utils/log2.txt
+graph-utils/output_mode1/
+graph-utils/output_mode2/
